logs/watchdog_20251011_2230.log
[11/10/2025 22:30:01,65] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 22:30:01,86] END WATCHDOG 
